--- a/nilearn/plotting/data/html/surface_plot_template.html
+++ b/nilearn/plotting/data/html/surface_plot_template.html
@@ -13,7 +13,7 @@
         function makePlot(surface, hemisphere, divId) {
 
             decodeHemisphere(surfaceMapInfo, surface, hemisphere);
-            info = surfaceMapInfo[surface + "_" + hemisphere];
+            var info = surfaceMapInfo[surface + "_" + hemisphere];
             info["type"] = "mesh3d";
             info["vertexcolor"] = surfaceMapInfo["vertexcolor_" + hemisphere];
 
