--- a/nilearn/plotting/data/html/stat_map_template.html
+++ b/nilearn/plotting/data/html/stat_map_template.html
@@ -8,7 +8,7 @@
   <div id="div_viewer">
     <!-- this is the canvas that will feature the brain slices -->
     <canvas id="3Dviewer">
-    <!-- load a hidden version of the sprite image that includes all (sagital) brain slices -->
+    <!-- load a hidden version of the sprite image that includes all (sagittal) brain slices -->
     <img id="spriteImg" class="hidden" src="data:image/png;base64,$bg_base64" alt="background" />
     <!-- the colormap -->
     <img id="colorMap" class="hidden" src="data:image/png;base64,$cm_base64" alt="colormap">
