--- a/nilearn/plotting/data/html/surface_plot_template_niivue.html
+++ b/nilearn/plotting/data/html/surface_plot_template_niivue.html
@@ -26,7 +26,7 @@
           name: "surf_map.gii",
           useNegativeCmap: true,
           opacity: 0.7,
-          cal_min: $threshold,
+          cal_min: $INSERT_THRESHOLD_HERE,
           base64: "$INSERT_SURF_MAP_BASE64_HERE",
       },
     ];
