--- a/nilearn/plotting/data/html/surface_plot_template_niivue.html
+++ b/nilearn/plotting/data/html/surface_plot_template_niivue.html
@@ -17,9 +17,9 @@
     let layers = [
       {
           name: "bg_map.gii",
-          useNegativeCmap: true,
+          useNegativeCmap: false,
           opacity: 0.7,
-          colorMap: "gray",
+          colormap: "gray",
           base64: "$INSERT_BG_MAP_BASE64_HERE",
       },
       {
@@ -27,6 +27,7 @@
           useNegativeCmap: true,
           opacity: 0.7,
           cal_min: $INSERT_THRESHOLD_HERE,
+          // colormap: "viridis",
           base64: "$INSERT_SURF_MAP_BASE64_HERE",
       },
     ];
@@ -34,8 +35,9 @@
       gl: nv.gl,
       name: "pial_left.gii",
       layers: layers,
-      base64:"$INSERT_MESH_BASE64_HERE"
+      base64: "$INSERT_MESH_BASE64_HERE"
     });
     nv.addMesh(m);
+    nv.opts.isColorbar = $INSERT_COLORBAR_HERE;
   </script>
 </html>
