--- a/nilearn/plotting/data/html/surface_plot_template_niivue.html
+++ b/nilearn/plotting/data/html/surface_plot_template_niivue.html
@@ -14,12 +14,14 @@
   <script type="module" async>
     var nv = new niivue.Niivue();
     nv.attachTo('gl');
+
     let layers = [
       {
           name: "bg_map.gii",
           useNegativeCmap: false,
           opacity: 0.7,
           colormap: "gray",
+          colorbarVisible: false,
           base64: "$INSERT_BG_MAP_BASE64_HERE",
       },
       {
@@ -31,13 +33,21 @@
           base64: "$INSERT_SURF_MAP_BASE64_HERE",
       },
     ];
+
     let m = await niivue.NVMesh.loadFromBase64({
       gl: nv.gl,
       name: "pial_left.gii",
       layers: layers,
       base64: "$INSERT_MESH_BASE64_HERE"
     });
-    nv.addMesh(m);
+
+    await nv.addMesh(m);
+
+    // Hide background map colorbar
+    nv.meshes[0].layers[0].colorbarVisible = false;
     nv.opts.isColorbar = $INSERT_COLORBAR_HERE;
+
+    // Refresh scene to take colorbar changes into account
+    nv.updateGLVolume();
   </script>
 </html>
