Add util function to convert matplotlib cmap to niivue cmap (not working yet)

--- a/nilearn/plotting/data/html/surface_plot_template_niivue.html
+++ b/nilearn/plotting/data/html/surface_plot_template_niivue.html
@@ -28,7 +28,7 @@
           useNegativeCmap: true,
           opacity: 0.7,
           cal_min: $INSERT_THRESHOLD_HERE,
-          // colormap: "viridis",
+          colormap: $INSERT_SURF_COLORMAP_HERE,
           base64: "$INSERT_SURF_MAP_BASE64_HERE",
       },
     ];
